# cairo-recursion-export

./: Cargo.toml  README.md
data/: add_ap_opcode  add_ap_opcode.json  add_opcode  add_opcode.json  add_opcode_small  add_opcode_small.json  assert_eq_opcode  assert_eq_opcode.json  assert_eq_opcode_double_deref  assert_eq_opcode_double_deref.json  assert_eq_opcode_imm  assert_eq_opcode_imm.json  blake_compress_opcode  blake_compress_opcode.json  blake_g  blake_g.json  blake_round  blake_round.json  blake_round_sigma  blake_round_sigma.json  call_opcode  call_opcode.json  call_opcode_op_1_base_fp  call_opcode_op_1_base_fp.json  call_opcode_rel  call_opcode_rel.json  generic_opcode  generic_opcode.json  jnz_opcode  jnz_opcode.json  jnz_opcode_taken  jnz_opcode_taken.json  jump_opcode  jump_opcode.json  jump_opcode_double_deref  jump_opcode_double_deref.json  jump_opcode_rel  jump_opcode_rel.json  jump_opcode_rel_imm  jump_opcode_rel_imm.json  (+58 more)
evaluator/: Cargo.toml
evaluator/src/: lib.rs  mock_parameters.rs
gvn/: Cargo.toml
gvn/src/: lib.rs
