[workspace]
members = ["gvn", "evaluator"]
resolver = "2"

[workspace.dependencies]
stwo-prover = { git = "https://github.com/starkware-libs/stwo/", rev = "61d1f6b" }
cairo-air = { git = "https://github.com/Eikix/stwo-cairo/", branch = "feat/no_std_hashmap" }
num-traits = "0.2.19"
rand = { version = "0.8.5", default-features = false, features = ["small_rng"] }
serde = { version = "1.0.219", features = ["derive"] }
bincode = "2.0.1"

[patch.'https://github.com/starkware-libs/stwo']
stwo-prover = { git = "https://github.com/Bitcoin-Wildlife-Sanctuary/stwo-for-cairo-export" }

[profile.release]
opt-level = 3
lto = "thin"
incremental = true
panic = 'abort'

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = "thin"
incremental = true
debug-assertions = false

[profile.dev]
opt-level = 3
panic = 'abort'

[profile.test]
opt-level = 3
lto = "thin"
incremental = true
debug-assertions = true
debug = true