[workspace]
members = ["gvn", "evaluator"]
resolver = "2"

[workspace.dependencies]
stwo-prover = { git = "https://github.com/starkware-libs/stwo/", rev = "61d1f6b" }
cairo-air = { git = "https://github.com/starkware-libs/stwo-cairo/", rev = "ded0e11" }
num-traits = "0.2.19"
rand = { version = "0.8.5", default-features = false, features = ["small_rng"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
indexmap = "2.9.0"

[patch.'https://github.com/starkware-libs/stwo']
stwo-prover = { git = "https://github.com/Bitcoin-Wildlife-Sanctuary/stwo-circle-poseidon-plonk", branch = "cp-poseidon-flattened" }

[profile.release]
opt-level = 3
lto = "thin"
incremental = true
panic = 'abort'

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = "thin"
incremental = true
debug-assertions = false

[profile.dev]
opt-level = 3
panic = 'abort'

[profile.test]
opt-level = 3
lto = "thin"
incremental = true
debug-assertions = true
debug = true