[package]
name = "cairo-recursion-evaluator"
version = "0.1.0"
edition = "2021"

[dependencies]
stwo-prover.workspace = true
num-traits.workspace = true
cairo-recursion-gvn = { path = "../gvn" }
serde.workspace = true
bincode.workspace = true
cairo-air.workspace = true
miniz_oxide.workspace = true
indexmap.workspace = true

[dev-dependencies]
rand.workspace = true

[[bin]]
name = "export-to-file"
test = false
harness = false